--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+#database
+asigurari.db
+rca.db
+locuinte.db
+
 # User-specific files
 *.rsuser
 *.suo
